get my role usecase
